--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <div class="ba-header__main">
             <div class="container">
                 <div class="ba-header__main-inner">
-                    <a class="mobile-menu-btn ba-col-2" href="#"><i class="fas fa-bars"></i></a>
-                    <a class="ba-header__main-logo ba-col-6 ba-col-sm-2 ba-col-md-2" href="./index.html">
+                    <a class="mobile-menu-btn ba-col-2 ba-col-sm-1" href="#">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                    <a class="ba-header__main-logo ba-col-6 ba-col-sm-9 ba-col-md-2" href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
                     <nav class="ba-menu ba-col-sm-12 ba-col-sm-8 ba-col-md-8">
@@ -85,23 +87,7 @@
                             <span class="shopping__counter">0</span>
                         </a>
                     </div>
-
                 </div>
-                <!--  -->
-                <!-- <div class="ba-col-12 ba-col-sm-12 hidden-md">
-                    <div>
-                        <div class="menu-small">
-                            <p>Menu</p>
-                            <div class="btn-group pull-right">
-                                <button type="button" class="btn dropdown-toggle" data-toggle="#menu"
-                                    aria-expanded="false">
-                                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <!--  -->
             </div>
         </div>
 
